--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:background="@drawable/rounded_dialog_background">
 
-    <!-- Círculo de progreso -->
+
     <ProgressBar
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -15,15 +15,15 @@
         android:indeterminate="true"
         android:indeterminateTint="@color/black" />
 
-    <!-- Texto informativo -->
     <TextView
-        android:id="@+id/loadingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Iniciando sesión"
+        android:text="Cerrando sesión"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         android:textColor="@android:color/black"
         android:textAlignment="center"/>
+
+
 </LinearLayout>
